# ccpair

./: .mcp.json  README.md  install.sh  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: release.yml
hooks/: hooks.json
hooks/scripts/: pair-stop.sh  pair-user-prompt.sh
skills/pair/: SKILL.md
skills/peer-session/: SKILL.md
src/claude_pair/: __main__.py  approval.py  cli.py  client.py  constants.py  daemon.py  discovery.py  installer.py  messages.py  server.py  session.py  skills.py  transport.py  utils.py
